Fix contrast issue and correct file inconsistencies

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -51,23 +51,23 @@
   --color-gray: #000000;
   --color-green-700: #018642;
   --color-green: #0CCE6B;
+  --color-orange-50: #FFF3E0;
   --color-orange-700: #D04900;
   --color-orange: #FFA400;
-  --color-orange-rgb: 255, 164, 0;
   --color-red-700: #EB0F00;
   --color-red: #FF4E42;
   --color-teal-600: #00897B;
   --color-white: #FFFFFF;
 
   /* Context-specific colors */
-  --color-average-secondary: var(--color-orange-700);
   --color-average: var(--color-orange);
-  --color-fail-secondary: var(--color-red-700);
+  --color-average-secondary: var(--color-orange-700);
   --color-fail: var(--color-red);
+  --color-fail-secondary: var(--color-red-700);
+  --color-hover: var(--color-gray-50);
   --color-informative: var(--color-blue-900);
-  --color-pass-secondary: var(--color-green-700);
   --color-pass: var(--color-green);
-  --color-hover: var(--color-gray-50);  
+  --color-pass-secondary: var(--color-green-700);
 
   /* Component variables */
   --audit-description-padding-left: calc(var(--score-icon-size) + var(--score-icon-margin-left) + var(--score-icon-margin-right));
@@ -140,7 +140,10 @@
   --topbar-height: 32px;
   --topbar-logo-size: 24px;
   --topbar-padding: 0 8px;
+  --toplevel-warning-background-color: var(--color-orange-50);
+  --toplevel-warning-message-text-color: var(--report-text-color);
   --toplevel-warning-padding: 18px;
+  --toplevel-warning-text-color: var(--report-text-color);
 
   /* SVGs */
   --plugin-icon-url-dark: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="%23FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20.5 11H19V7c0-1.1-.9-2-2-2h-4V3.5C13 2.12 11.88 1 10.5 1S8 2.12 8 3.5V5H4c-1.1 0-1.99.9-1.99 2v3.8H3.5c1.49 0 2.7 1.21 2.7 2.7s-1.21 2.7-2.7 2.7H2V20c0 1.1.9 2 2 2h3.8v-1.5c0-1.49 1.21-2.7 2.7-2.7 1.49 0 2.7 1.21 2.7 2.7V22H17c1.1 0 2-.9 2-2v-4h1.5c1.38 0 2.5-1.12 2.5-2.5S21.88 11 20.5 11z"/></svg>');
@@ -188,6 +191,9 @@
     --report-text-color-secondary: var(--color-gray-400);
     --report-text-color: var(--color-gray-100);
     --topbar-background-color: var(--color-gray);
+	--toplevel-warning-background-color: #544B40;
+	--toplevel-warning-message-text-color: var(--color-orange-700);
+	--toplevel-warning-text-color: var(--color-gray-100);
 
     /* SVGs */
     --plugin-icon-url: var(--plugin-icon-url-dark);
@@ -1011,17 +1017,17 @@
 
 .lh-warnings--toplevel {
   --item-margin: calc(var(--header-line-height) / 4);
-  color: var(--report-text-color);  
+  color: var(--toplevel-warning-text-color);
   margin-left: auto;
   margin-right: auto;
-  max-width: calc(var(--report-width) - var(--category-padding) * 2);  
-  background-color: rgba(var(--color-orange-rgb), .1);
+  max-width: calc(var(--report-width) - var(--category-padding) * 2);
+  background-color: var(--toplevel-warning-background-color);
   padding: var(--toplevel-warning-padding);
   border-radius: 8px;
 }
 
 .lh-warnings__msg {
-	color: var(--color-orange-700);
+	color: var(--toplevel-warning-message-text-color);
 	margin: 0;
 }
 
